# garmin-worksheets

./: .gitignore  README.md  inspect_fit.ipynb  pyproject.toml  weight_analysis.ipynb
data/: 11924306356_ACTIVITY.fit  15560725866_ACTIVITY.fit  15941962144_ACTIVITY.fit  weight_1.csv  weight_2.csv
